fixed index-header overlapping on small mobile devices

--- a/app/styles/routes/index.scss
+++ b/app/styles/routes/index.scss
@@ -20,43 +20,40 @@ $header-height: 75vh;
   }
 }
 
-.index-poster {
-  position: absolute;
-  top: 56px;
-  left: 50%;
-  margin-top: -$navbar-height;
-  margin-left: -50vw;
-  background-position: center;
-  background-size: cover;
-  width: 100vw;
-  height: $header-height;
-  min-height: 400px;
-}
-
-.index-poster-overlay {
-  position: absolute;
-  left: 50%;
-  opacity: 0.25;
-  margin-left: -50vw;
-  background-color: $black;
-  width: 100vw;
-  height: $header-height;
-}
-
 .index-header {
   display: flex;
+  position: relative;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: -20px;
   height: $header-height;
   min-height: 400px;
   color: $white;
 
+  .index-poster, .index-poster-overlay {
+    position: absolute;
+    top: 56px;
+    left: 50%;
+    margin-top: -$navbar-height;
+    margin-left: -50vw;
+    width: 100vw;
+    height: $header-height;
+    min-height: 400px;
+  }
+
+  .index-poster {
+    background-position: center;
+    background-size: cover;
+  }
+  
+  .index-poster-overlay {
+    opacity: 0.25;
+    background-color: $black;
+  }
+
   .image {
     width: 100%;
-    max-width: 350px;
-    max-height: 350px;
+    max-width: min(350px, 70vw);
   }
 
   .new-member-text {
@@ -68,6 +65,18 @@ $header-height: 75vh;
 
   * {
     z-index: 1;
+  }
+}
+
+@include media-breakpoint-only(xs) {
+  .index-header {
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    height: fit-content;
+
+    .index-poster, .index-poster-overlay {
+      height: 100%;
+    }
   }
 }
 
